--- a/src/styles/main-content-block.less
+++ b/src/styles/main-content-block.less
@@ -49,6 +49,9 @@ body {
             justify-content: center;
             background: #f5f6fa;
             // background: #697bc0;
+
+            border: solid 1px red;
+
             .aa__c1_block1_linear {
                 margin: 0px 0px 30px 0px;
                 height: 3px;
@@ -285,7 +288,8 @@ body {
                 // background:  #ffd000;
                 // background: #497285;
                
-                box-shadow: 7px 7px #c7c7c7;
+                box-shadow: 7px 7px #dddddd;
+                // box-shadow: 0 0 5px 5px rgb(233, 233, 233);
                 transition: linear 1.0s;
                 a {
                     text-decoration: none;
@@ -319,10 +323,10 @@ body {
                     // justify-content: space-around;
                     min-height: 22px;
                     width: 195px;
-                    background: #40739e;
-                    background:  #497285;
-                  
-                    
+                    // background: #40739e;///////////////////////////////
+                    // background:  #497285;///////////////////////////////
+                    background-image: url("../images/fon_parts_three.jpg");
+                    background-size: cover; 
                     margin-top: -4px;
                     transition: linear 1.0s;
                     // background: #b06548;
@@ -342,6 +346,7 @@ body {
             }
             .aa__c4_section1:hover {
                 box-shadow: 1px 1px #c7c7c7;
+                // box-shadow: 0 0 1px 1px rgb(189, 189, 189);
                 transition: linear 1.0s;
             }
             .aa__c4_section1:hover a .aa__c4s1_block2 .aa__c4s1b2_text  {
@@ -366,14 +371,15 @@ body {
                 transition: linear 1.0s; 
             }
         }
-
         ////////////////////////////////////////////////////////////////////////////
-
         .aa__content4_button {
             background: #f5f6fa;
             .button_catalog {
+                background-image: url("../images/fon_parts_three.jpg");
+                background-size: cover; 
+                background-size: 300px 70px;
                 // background:linear-gradient(to bottom, #FFFFFF, #E6E6E6) #F5F5F5 repeat-x;
-                background: #497285;
+                // background: #497285;
                 border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #B3B3B3;
                 border-radius: 4px;
                 border-style: solid;
@@ -383,15 +389,13 @@ body {
                 text-decoration:none;
                 display:block;
                 // font-size: 14px;
-
                 color: white;
                 text-transform: uppercase;
                 font-family: 'Roboto', sans-serif;
-                font-weight: 400;
+                font-weight: 500;
                 font-size: 17px;
                 letter-spacing: 0px;
                 word-spacing: 0px;
-
                 width: 300px;
                 line-height: 20px;
                 margin: 20px auto;
@@ -410,7 +414,6 @@ body {
                 transform: translateZ(0);
                 box-shadow: 0 0 1px rgba(0, 0, 0, 0);
             }
-            
             .button_catalog:before {
                 pointer-events: none;
                 position: absolute;
@@ -428,7 +431,6 @@ body {
                 -webkit-transition-property: -webkit-transform, opacity;
                 transition-property: transform, opacity;
             }
-            
             .button_catalog:hover {
                 -webkit-transform: translateY(-5px);
                 -ms-transform: translateY(-5px);
@@ -441,7 +443,6 @@ body {
                 -ms-transform: translateY(5px);
                 transform: translateY(5px);
             }
-
         }
         /////////////////////////////////////////////////////////////////////////////
         .aa__content5 {
@@ -534,20 +535,22 @@ body {
                     margin: 5px 10px 20px 10px;
                     height: 77px;
                     width: 260px;
-                    background-image: url("../images/fon_parts.jpg");
+                    background-image: url("../images/fon_parts_one.jpg");
                     background-size: cover; 
                     background-size: 260px 130px;
                     transition: linear 1.0s;
-                    border: 1px solid #25425a;
+                    // border: 1px solid #25425a;
                     text-align: center;
-                    box-shadow: 7px 7px rgb(147, 147, 147);
-                    transition: linear 0.7s;
+                    // box-shadow: 7px 7px rgb(147, 147, 147);
+                    // box-shadow: 0 5px 15px 0 rgba(0,0,0,0.2); 
+                    box-shadow: 7px 7px #dddddd;
+                    transition: linear 0.5s;
                     overflow: hidden;
                     a {
                         text-decoration: none;
                         text-transform: uppercase;
                         .aa__c6c6s1_text_one {
-                            color: rgb(255, 255, 255);
+                            color: #f5f6fa;
                             letter-spacing: 3px;
                             text-transform: uppercase;
                             font-size: 24px;
@@ -557,23 +560,23 @@ body {
                             letter-spacing: 1px;
                             word-spacing: 7px;
                             margin: 1px; 
-                            transition: linear 0.7s;
+                            transition: linear 0.5s;
                         }
                         .aa__c6c6s1_block1 {   
                             margin: -2px 0px -6px 0px;  
                             .fa-star {
                                 padding: 0;
                                 margin: 0;
-                                color: white;
+                                color: #f5f6fa;
                                 // color: #487eb0;
-                                -webkit-text-stroke: 1px white;
+                                -webkit-text-stroke: 1px #f5f6fa;
                                 font-size: 8px;
-                                transition: linear 0.7s;
+                                transition: linear 0.5s;
                                 text-align: center;   
                             }
                         }
                         .aa__c6c6s1_text_two{
-                            color: rgb(255, 255, 255);
+                            color: #f5f6fa;
                             margin-top: 6px;
                             text-transform: uppercase;
                             font-size: 18px;
@@ -582,24 +585,24 @@ body {
                             text-transform: uppercase;
                             letter-spacing: 1px;
                             word-spacing: 5px;
-                            transition: linear 0.7s;
+                            transition: linear 0.5s;
                         }
                     }
                 } 
-                .aa__c6c6_section1:hover {
-                   
+                .aa__c6c6_section1:hover {  
                     background-size: 300px 130px;
-                    box-shadow: 0px 0px #25425a;
+                    // box-shadow: 0px 0px #25425a;
+                    // box-shadow: 0px 0px 0px 0px #666;
+                    box-shadow: 1px 1px #c7c7c7;
                     transition: linear 0.7s;
                 }
                 .aa__c6c6_section1:hover a .fa-star {
-                    transition: linear 0.7s;
+                    transition: linear 0.5s;
                     color:#fbc531;
                     color: #ffd000;
                     padding-left: 2px;
                     padding-right: 2px;
-                    font-size: 11px;
-                    
+                    font-size: 11px;               
                 }   
             }
             // .content_block_1-5w::-webkit-scrollbar {
@@ -608,12 +611,14 @@ body {
             // }
         }
         ///////////////////////////////////////////////////////////////////////////
-
         .aa__content6_button {
             background: #f5f6fa;
             .button_partsList {
+                background-image: url("../images/fon_parts_three.jpg");
+                background-size: cover; 
+                background-size: 300px 70px;
                 // background:linear-gradient(to bottom, #FFFFFF, #E6E6E6) #F5F5F5 repeat-x;
-                background: #497285;
+                // background: #497285;
                 border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #B3B3B3;
                 border-radius: 4px;
                 border-style: solid;
@@ -623,15 +628,13 @@ body {
                 text-decoration:none;
                 display:block;
                 // font-size: 14px;
-
                 color: white;
                 text-transform: uppercase;
                 font-family: 'Roboto', sans-serif;
-                font-weight: 400;
+                font-weight: 500;
                 font-size: 17px;
                 letter-spacing: 0px;
                 word-spacing: 0px;
-
                 width: 300px;
                 line-height: 20px;
                 margin: 20px auto;
@@ -650,7 +653,6 @@ body {
                 transform: translateZ(0);
                 box-shadow: 0 0 1px rgba(0, 0, 0, 0);
             }
-            
             .button_partsList:before {
                 pointer-events: none;
                 position: absolute;
@@ -668,7 +670,6 @@ body {
                 -webkit-transition-property: -webkit-transform, opacity;
                 transition-property: transform, opacity;
             }
-            
             .button_partsList:hover {
                 -webkit-transform: translateY(-5px);
                 -ms-transform: translateY(-5px);
@@ -681,7 +682,6 @@ body {
                 -ms-transform: translateY(5px);
                 transform: translateY(5px);
             }
-
         }
         ////////////////////////////////////////////////////////////////////////////
         .aa__content7 {
