--- a/src/styles/main-footer.less
+++ b/src/styles/main-footer.less
@@ -9,24 +9,12 @@ body {
     flex-direction: column;
     align-items: center;
     .main-footer{ 
-        // padding: 0;
-        // margin: 0;
-        // display: flex;
-        // flex-direction: column;
-        // min-height: 230px;
+        padding: 0;
+        margin: 0;
         width: 100%;
         width: 100vw;
-        // max-width: 1260px;
-        // justify-content: space-around;
-
-        background: #222;
         background: #45698b;
-        
-        // background-image: url("../images/200.jpg");
-        // font-family: 'K2D', sans-serif;
-        // color: #aaa;
         color: #f5f6fa;
-        
         z-index: 11111;
         .container {
             width: 100%;
@@ -36,9 +24,7 @@ body {
                 flex: 1;
                 margin: 5px 15px;
                 padding: 10px 20px;
-                min-width: 300px;
-                
-                
+                min-width: 300px;    
             }
             .box:hover h4 {
                 color: #ffd000;
@@ -48,14 +34,10 @@ body {
                 font-family: 'Roboto', sans-serif;
                 font-weight: 400;
                 font-size: 16px;
-                color: #f5f6fa;
-                
+                color: #f5f6fa; 
                 text-transform: uppercase;
                 letter-spacing: 3px;
-                // border-bottom: 2px solid #555;
-                // border-bottom: 2px solid #487eb0;
                 border-bottom: 2px solid #4f97db;
-               
                 position: relative;
                 margin-bottom: 16px;
                 transition: linear 1.0s;
@@ -65,11 +47,9 @@ body {
                 // width: 130px;
                 width: 50%;
                 height: 100%;
-                // border-bottom: 2px solid crimson;
                 border-bottom: 2px solid #ffd000;
                 position: absolute;
                 // margin-left: 25%;
-
             }
             .box p {
                 font-family: 'Roboto', sans-serif;
@@ -78,12 +58,9 @@ body {
                 padding-bottom: 10px;
             }
             .box a {
-                // color: #aaa;
                 color: #f5f6fa;
-                // color: #487eb0;
                 text-decoration: none;
                 display: inline-block;
-
                 font-family: 'Roboto', sans-serif;
                 font-weight: 400;
                 font-size: 16px;
@@ -95,27 +72,17 @@ body {
                 text-align: center;
                 line-height: 40px;
                 margin-right: 10px;
-               
                 transition: 0.5s linear;
                 border-radius: 5px;
-                // border: 1px solid #aaa;
                 border: 1px solid #5aaaf5;
-
                 color: #5aaaf5;
             } 
             .box a:hover {
-                // color: crimson;
-                color: #ffd000;
-               
-                // border-radius: 50%;
-                // border: 2px solid crimson;   
+                color: #ffd000;  
             } 
             .box a:hover i {
-                // border: 1px solid rgb(143, 28, 51); 
                 border: 1px solid #ffd000; 
-                // color: crimson;
                 color: #ffd000; 
-               
             }
             .box .social {
                 margin-top: 5px;
@@ -133,7 +100,6 @@ body {
                 border: none;
                 outline: none;
                 padding-left: 5px;
-                // padding: 5px;
                 margin-bottom: 10px;
             } 
             .box form label {
@@ -143,39 +109,28 @@ body {
                 text-transform: uppercase;
             }
             .box form label span {
-                // color: crimson;
                 color: #5aaaf5;   
             }
-            
             .box form button {
                 width: 50%;
                 height: 25px;
                 border: none;
                 outline: none;
-                // background: rgb(255, 255, 255);
                 background: #333;
                 text-transform: uppercase;
                 font-family: 'Roboto', sans-serif;
                 font-weight: 600;
                 font-size: 16px;
-                // color: #487eb0;
                 color:  #5aaaf5;
-               
                 letter-spacing: 4px;
                 border: 1px solid #5aaaf5;
                 border-radius: 3px;
                 transition: 0.5s linear;
-                cursor: pointer;
-                
+                cursor: pointer;  
             }
             .box form button:hover {
-                // background: crimson;
-                // border: 1px solid crimson;
                 border: 1px solid #ffd000;
-                // color: crimson;
                 color: #ffd000;
-                
-                
                 border-radius: 3px;
             }        
         }
@@ -193,9 +148,7 @@ body {
             overflow: hidden;
             p {
                 .author_text_one {
-                    color: #5aaaf5;
-                   
-                   
+                    color: #5aaaf5;  
                 }
                 .author_text_two {
                     color: crimson;
