--- a/src/styles/main-headertwo.less
+++ b/src/styles/main-headertwo.less
@@ -18,11 +18,8 @@ body {
         min-height: 275px;
         width: 100%;
         // max-width: 1260px;
-       
         width: 100vw;
-        
         justify-content: space-around;
-
         // background: rgb(255, 0, 119);
         .headerTwo {
             padding: 0;
@@ -34,23 +31,19 @@ body {
             // max-width: 1260px;
             width: 100vw;
             height: 270px;
-            
-            
             align-items: center;
             justify-content: center;
-            background: rgb(219, 219, 219);
+            background: #f5f6fa;
             .container_slider_css {
                 margin: 0;
                 padding: 0;
                 height: 100%;
                 // width: 100%;
                 width: 100vw;
-          
                 overflow: hidden;
                 overflow: hidden;
                 position: relative;
                 z-index: 77777;
-          
                 .photo_slider_css {
                     margin: 0;
                     padding: 0;
@@ -61,18 +54,14 @@ body {
                     width: 100vw;
                     height: 100%;
                     // max-width: 1260px;
-                   
                     // width: 100vw;
                     overflow: hidden;////////////
                     object-fit: cover;//////////////
-            
                 }
                 @keyframes round {
                     13%{opacity:1}
                     19%{opacity:0}
                 }
-          
-          
                 img:nth-child(1) {
                     animation-delay: 40s;
                 }
@@ -91,181 +80,20 @@ body {
                 img:nth-child(6) {
                     animation-delay: 0S;
                 } 
-          
-          
-                // #search_contact {
-                //     width: 370px;
-                //     height: 40px;
-                //     z-index: 88888;
-                //     position: relative;
-                //     float: right;
-                //     // background: #646464;
-                //     .search_contact_phone_email {
-                //         display: flex;
-                //         align-items: center;
-                //         justify-content: center;
-                //         margin-top: 8px;
-              
-                //         .phone {
-                
-                //             // background: #646464;
-                //             a {
-                //             font-family: 'K2D', sans-serif;
-                //             font-size: 18px;
-                //             font-weight: 600;
-                //             // color: rgb(255, 0, 0);
-                //             // text-shadow: 1px 1px 0 #ffffff, -1px -1px 0 #ffffff,1px -1px 0 #ffffff, -1px 1px 0 #ffffff;
-                //             // color: rgb(70, 70, 70);
-                //             // text-shadow: 1px 1px 2px white, -1px -1px 2px white, 1px -1px 2px white, -1px 1px 2px white;
-    
-                //             // color: rgb(161, 106, 3);
-                //             // text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
-                //             color: rgb(160, 100, 0);
-                //             // text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
-                //             text-shadow: 1px 1px 1px white, -1px -1px 1px white, 1px -1px 1px white, -1px 1px 1px white;
-                //             text-decoration: none;
-                //             padding: 10px;
-                //             }
-                //             a:hover {
-                                
-                //                 color: rgb(216, 142, 5);
-                //             }    
-                //         }
-                //         .email {
-                
-                //             // background: #646464;
-                //             a {
-                //                 font-family: 'K2D', sans-serif;
-                //                 font-size: 18px;
-                //                 font-weight: 600;
-                //                 // color: rgb(70, 70, 70);
-                //                 // text-shadow: 1px 1px 2px white, -1px -1px 2px white, 1px -1px 2px white, -1px 1px 2px white;
-    
-                //                 // color: rgb(255, 176, 5);
-                //                 // text-shadow: 1px 1px 0 #000000, -1px -1px 0 #000000,1px -1px 0 #000000, -1px 1px 0 #000000;
-    
-                //                 color: rgb(160, 100, 0);;
-                                
-                //                 // text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
-                //                 text-shadow: 1px 1px 1px white, -1px -1px 1px white, 1px -1px 1px white, -1px 1px 1px white;
-                //                 text-decoration: none;
-                //                 padding: 10px;
-                                
-                //             } 
-                //             a:hover {
-                                
-                //                 color: rgb(216, 142, 5);
-                //             }
-                //         }
-                //     }
-                // }
-                          ///////////////////////////////////////////////////////////////////////////////////
-                // #logo { 
-                //     margin-left: 20px;
-                //     margin-top: 50px;
-                //     z-index: 88888;
-                //     position: relative;
-                //     .logo_a {  
-                //         text-decoration: none;
-                //         .title {
-                //             font-family: 'K2D', sans-serif;
-                           
-                //             // color: rgb(160, 100, 0);
-                             
-                //             // color: crimson;
-                //             // color: white;
-                //             // color: black;
-                           
-                //             // color: black;
-                            
-                //             // background: #33cc66;
-                //             // background-image: url("../images/asd444.png");
-                //             background-size: 100% 100%;
-                //             height: 170px;
-                //             width: 300px;
-                //             // text-align: center;
-                //             margin-bottom: 10px;
-                //             margin-top: -35px;
-
-                //             -webkit-text-stroke-width: 1.0px;
-                //             -webkit-text-stroke-color: black;
-                //             .logoTitleText_h1 {
-                              
-                //                 // background-image: url("https://media0.giphy.com/media/eprnXWC1PLbrO/200w.webp?cid=ecf05e4766a07a8efbf760d33916daa3d2969cda69e31bac&rid=200w.webp");
-                //                 // // background-size: cover;
-                //                 // color: transparent;
-                //                 // -moz-background-clip: text;
-                //                 // -webkit-background-clip: text;
-                //                 letter-spacing: 1px;
-                //                 text-transform: uppercase;
-                //                 font-size: 120px;
-                //                 color: #ffd000; 
-                //                 line-height: 0.75;
-                //                 padding:  5px;
-                //                 margin: 0px 0 0px 0;
-                //                 font-weight: 1000;
-                //                 -webkit-text-stroke-width: 1.0px;
-                //                 -webkit-text-stroke-color: #222;
-                //                 // -webkit-text-stroke-color: #ffd000;
-
-                //                 margin-bottom: -10px;
-                //                 margin-top: 35px;
-                              
-                //             }
-                           
-                //             .logoTitleText_h4 {
-                //                 // font-family: 'Roboto', sans-serif;
-                //                 // font-family: 'Montserrat', sans-serif;
-                //                 color: #ffd000;
-                //                 text-transform: uppercase;
-                //                 font-size: 36px;
-                //                 letter-spacing: 2px;
-                //                 line-height: 0.5;
-                //                 padding: 0px;
-                //                 margin: 0px 0;
-                //                 font-weight: 1000;
-                //                 -webkit-text-stroke-width: 0.9px;
-                //                 -webkit-text-stroke-color: #222;
-                //                 transform: scale(1, 0.6);
-                //                 letter-spacing: 5px;
-                                
-                               
-                //             }
-
-                                
-
-
-                                
-                           
-                         
-                        
-                           
-                //         }
-                //         .title:hover {
-                            
-                //             color: rgb(216, 142, 5);
-                //         }
-                        
-                //     }
-                // }
-                            //////////////////////////////////////////////////////////
-
                 #logo { 
                     margin-left: 20px;
                     margin-top: 50px;
                     z-index: 88888;
-                    position: relative;
+                    // position: relative;
                     .logo_a {  
                         text-decoration: none;
-                        
+                        cursor: pointer;
                         .title_logo {
                             padding: 0;
                             margin: 0;
                             width: 300px;
                             height: 170px;
                             border-radius: 50%;
-                            // border: 5px solid #222;
-                          
                             border-left: 26px solid #45698b;
                             border-right: 26px solid #45698b;
                             border-bottom: 6px solid #ffd000;
@@ -277,98 +105,37 @@ body {
                             background-position: center;
 	                        background-size: 345px 216px;
                             background-repeat: no-repeat;
-                            transition: linear 0.5s;
-                            
-                            
-                            
-                           
-                            
-                            // .img_logo {
-                            //     // position: absolute;
-                              
-                            //     padding: 0;
-                            //     margin: 0;
-                            //     width: 330px;
-                            //     height: 330px;
-                            //     // height: 100%;
-                            //     // width: 100%;
-                            //     object-fit: cover;
-                            //     display: block;
-                               
-                            //     margin: -41px 0 0 -41px;
-                               
-
-                            // }   
                         }
                         .title_logo::before {
                             content: "";
                             padding: 0;
                             margin: 0;
                             position: absolute;
-                           
-                            // width: 300px;
-                            // height: 170px;
                             width: 100%;
                             height: 100%;
                             border-radius: 50%;
-                          
-                            // border: 3px solid #45698b;
-                            // // border-right: 10px solid#ffd000;
                             border-left: 13px solid  #ffd000;
                             border-right: 13px solid  #ffd000;
                             border-bottom: 3px solid #45698b;
                             border-top: 3px solid #45698b;
-                            margin: -3px 0 0 -13px;
-                            // overflow: hidden;
-                            // background-position: center;
-	                        // background-size: 388px 216px;
-                            // background-repeat: no-repeat;
-                            // margin-left: 25%;
-                            
-                        }
-                        
-                        // .title_logo::before:hover  {
-                        //     content: "";
-                        //     padding: 0;
-                        //     margin: 0;
-                        //     position: absolute;
-                           
-                        //     // width: 300px;
-                        //     // height: 170px;
-                        //     width: 100%;
-                        //     height: 100%;
-                        //     border-radius: 50%;
-                        //     border-left: 13px solid  #45698b;
-                        //     border-right: 13px solid  #45698b;
-                        //     border-bottom: 3px solidd #ffd000;
-                        //     border-top: 3px solidd #ffd000;
-                        //     transition: linear 0.5s;
-                        // }
-                       
-                                    
+                            margin: -3px 0 0 -13px; 
+                        }               
                     }
                 }
-            
                 #search_search {
-                    // position: absolute;
                     margin-left: auto;
-                    // width: 370px;
                     width: 100vw;
-                    height: 40px;
+                    min-height: 30px;
                     position: relative;
                     margin-top: 0px;
-                    padding-top: 6px;
-                    // float: right;
-                    // margin-right: -15px;
+                    margin-top: 7px;
                     z-index: 88888;
                     // background: #646464;
                     .search-box {
                         display: flex;
                         align-items: center;
                         justify-content: center;
-                        // margin-top: 20px;
-                        width: 100%; 
-                        
+                        width: 100%;  
                         .search-txt {
                             color: #222;
                             font-family: 'Roboto', sans-serif;
@@ -379,14 +146,9 @@ body {
                             font-size: 17px;
                             border-radius: 5px;
                             border: 2px solid #45698b;
-                            background-color: #fcf8ec;
+                            background-color: #fcf8ec;////цвет под логотип
                             min-width: 380px; 
-                            text-align: center;
-                            
-                            
-                            
-                           
-                            
+                            text-align: center;   
                         }
                         .search-btn {
                             width: 60px;
@@ -394,14 +156,12 @@ body {
                             float: left;
                             padding: 5px;
                             font-size: 17px;
-                            // background-color: rgb(96, 98, 98);
                             color: #45698b;
                             border-radius: 5px;
                             border: 2px solid #45698b;
-                            background-color: #fcf8ec;
+                            background-color: #fcf8ec;////цвет под логотип
                             margin-left: 1px;
                             transition: linear 0.5s;
-                            
                             .fas {
                                 padding: 0;
                                 margin: 0;
@@ -411,7 +171,6 @@ body {
                         .search-btn:hover {
                             background-color: #ffd000;
                             color: #45698b;
-                            // border: 2px solid #45698b;
                             cursor: pointer;
                             transition: linear 0.5s;
                         }
@@ -421,8 +180,7 @@ body {
                         clear: both;
                         display: table;
                     }
-                }
-                
+                }   
             }
         }
     }
