--- a/src/styles/main-media-headertwo.less
+++ b/src/styles/main-media-headertwo.less
@@ -1,177 +1,57 @@
 
-
-@media (min-width: 307px) and (max-width: 379px) {
+@media (min-width: 375px) and (max-width: 450px) {
     body {
         header {
             .headerTwo {
-                // background: rgb(219, 219, 219);
                 .container_slider_css {
-                    #search_contact {
-                        z-index: 88888;
-                        margin-left: auto;
-                        width: 200px;/////////////////////////////////////////////////////////
-                        height: 40px;
-                        .search_contact_phone_email {
-                            // display: flex;
-                            display: block;//////////////////////////////////////////////////////
-                            align-items: center;
-                            justify-content: center;
-                            margin-top: 8px;
-                            .phone {
-                                // background: #646464;
-                                a {
-                                font-family: 'K2D', sans-serif;
-                                font-size: 18px;
-                                font-weight: 600;
-                                // color: rgb(255, 0, 0);
-                                // text-shadow: 1px 1px 0 #ffffff, -1px -1px 0 #ffffff,1px -1px 0 #ffffff, -1px 1px 0 #ffffff;
-                                // color: rgb(70, 70, 70);
-                                // text-shadow: 1px 1px 2px white, -1px -1px 2px white, 1px -1px 2px white, -1px 1px 2px white;
-        
-                                color: rgb(161, 106, 3);
-                                text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
-                                text-decoration: none;
-                                padding: 10px;
-                                }    
-                            }
-                            .email {
-                    
-                                // background: #646464;
-                                a {
-                                    font-family: 'K2D', sans-serif;
-                                    font-size: 18px;
-                                    font-weight: 600;
-                                    // color: rgb(70, 70, 70);
-                                    // text-shadow: 1px 1px 2px white, -1px -1px 2px white, 1px -1px 2px white, -1px 1px 2px white;
-        
-                                    // color: rgb(255, 176, 5);
-                                    // text-shadow: 1px 1px 0 #000000, -1px -1px 0 #000000,1px -1px 0 #000000, -1px 1px 0 #000000;
-        
-                                    color: rgb(161, 106, 3);
-                                    text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
-                                    text-decoration: none;
-                                    padding: 10px;
-                                } 
-                            }
-                        }
-                    }
-        
-                    #logo {
-                        // margin-right: auto;
-                        margin-left: 20px;
-                        margin-top: 70px;
-                        // position: absolute;
-                        z-index: 88888;
-                        position: relative;
+                    #logo { 
                         .logo_a {  
-                            text-decoration: none;
-                            .title {
-                                font-family: 'K2D', sans-serif;
-                                color: #FFFFFF;
-                                letter-spacing: 1px;
-                                // background: #33cc66;
-                                .logoTitleText_h1 {
-                                    // background-image: url("https://media0.giphy.com/media/eprnXWC1PLbrO/200w.webp?cid=ecf05e4766a07a8efbf760d33916daa3d2969cda69e31bac&rid=200w.webp");
-                                    // // background-size: cover;
-                                    // color: transparent;
-                                    // -moz-background-clip: text;
-                                    // -webkit-background-clip: text;
-                                    text-transform: uppercase;
-                                    font-size: 70px;
-                                    line-height: 0.75;
-                                    padding:  5px;
-                                    margin: 10px 0;
-                                    font-weight: 800;
-                                    color: rgb(216, 142, 5);
-                                    text-shadow: 2px 1px 0 #070707, -2px -1px 0 #080808, 2px -1px 0 #070707, -2px 1px 0 #070707;
-                                    text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
-                                }
-                                .logoTitleText_h6 {
-                                    // background-image: url("https://media0.giphy.com/media/eprnXWC1PLbrO/200w.webp?cid=ecf05e4766a07a8efbf760d33916daa3d2969cda69e31bac&rid=200w.webp");
-                                    // // background-size: cover;
-                                    // color: transparent;
-                                    // -moz-background-clip: text;
-                                    // -webkit-background-clip: text;
-                                    text-transform: uppercase;
-                                    font-size: 20px;
-                                    line-height: 0.75;
-                                    padding: 5px;
-                                    margin: 10px 0;
-                                    font-weight: 600;
-                                    // color: rgb(253, 27, 27);
-                                    // text-shadow: 1px 1px 0 #ffffff, -1px -1px 0 #ffffff,1px -1px 0 #ffffff, -1px 1px 0 #ffffff;
-                                    // color: rgb(255, 255, 255);
-                                    // text-shadow: 1px 1px 0 rgb(207, 142, 2), -1px -1px 0 rgb(207, 145, 12),1px -1px 0 rgb(255, 176, 5), -1px 1px 0 rgb(255, 176, 5);
-                                    // color: rgb(255, 176, 5);
-                                    // text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
-                                    color: rgb(161, 106, 3);
-                                    text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
-                                    // text-shadow: 1px 1px 0px white, -1px -1px 0px white, 1px -1px 0px white, -1px 1px 0px white;
-                      
-                     
-                                }
-                            }
+                            .title_logo { 
+                                margin: 50px 0 0 10px;
+                            } 
                         }
                     }
-        
                     #search_search {
-                        margin-left: auto;
-                        width: 370px;
-                        height: 40px;
-                        position: relative;
-                        margin-top: 5px;
-                        float: right;
-                        margin-right: -20px;
-                        z-index: 88888;
-                        // background: #646464;
                         .search-box {
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-                            margin-top: 6px;
                             .search-txt {
-                                width: 250px;
-                                float: left;
-                                padding: 3px;
-                                font-size: 17px;
-                                border-radius: 5px;
-                                border: 2px solid rgb(161, 106, 3);
-                                background-color: white;
-                                max-width: 280px;  
+                                min-width: 310px;  
                             }
                             .search-btn {
-                                width: 40px;
-                                height: 30px;
-                                float: left;
-                                padding: 3px;
-                                font-size: 17px;
-                                // background-color: rgb(96, 98, 98);
-                                color: rgb(161, 106, 3);
-                                border-radius: 5px;
-                                border: 2px solid rgb(161, 106, 3);
-                                margin-left: 1px;
-                                .fas {
-                                    padding: 0;
-                                    margin: 0;
-                                    margin-top: 2px;
-                                }
+                                width: 55px; 
                             }
-                            .search-btn:hover {
-                                background-color: rgb(161, 106, 3);
-                                color: #fff;
-                                border: 2px solid rgb(0, 0, 0);
-                                cursor: pointer;
-                            }
+                                
                         }
-                        .search-box::after {
-                            content: "";
-                            clear: both;
-                            display: table;
-                        }
-                    }
-                    
+                    }   
                 }
             }
         }
-    }
+    }  
+}
+@media (min-width: 300px) and (max-width: 374px) {
+    body {
+        header {
+            .headerTwo {
+                .container_slider_css {
+                    #logo { 
+                        .logo_a {  
+                            .title_logo { 
+                                margin: 50px 0 0 -18px;
+                            } 
+                        }
+                    }
+                    #search_search {
+                        .search-box {
+                            .search-txt {
+                                min-width: 250px; 
+                            }
+                            .search-btn {
+                                width: 45px; 
+                            }
+                                
+                        }
+                    }   
+                }
+            }
+        }
+    }  
 }
